--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
     <header>
         <div class="header-content">
             <!-- Add your profile picture here -->
-            <img src="image/WhatsApp Image 2025-03-16 at 20.31.01_b9468132.jpg" alt="Your Profil Picture" class="profile-picture">
+            <img src="WhatsApp Image 2025-03-17 at 8.01.33 PM (1).jpeg" alt="Your Profil Picture" class="profile-picture">
             <h1>Muthupandi K</h1>
             <p>I am student</p>
         </div>
@@ -164,7 +164,7 @@
         <div class="section-content">
             <center>
                 <h2>Resume</h2>
-                <a href="image/WhatsApp Image 2025-03-17 at 21.58.19_9728de23.jpg" target="_blank" class="download-button">Download CV</a>
+                <a href="alan.pdf" target="_blank" class="download-button">Download CV</a>
             </center>
         </div>
 
